Fix typo on .env

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ PGADMIN_IP=10.0.0.3
 
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=password
-POSTGRES_DB=posgres
+POSTGRES_DB=postgres
 
 PGADMIN_DEFAULT_EMAIL=admin@email.com
 PGADMIN_DEFAULT_PASSWORD=admin
